--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
           CF_HOST: "${{ secrets.CF_RUNTIME_HOST }}"
           CF_API_KEY: ${{ secrets.USER_TOKEN }}
           # use image registry integration - the name of the integration used for pulling information on the image.
-          CF_CONTAINER_REGISTRY_INTEGRATION: "quay.io"
+          CF_CONTAINER_REGISTRY_INTEGRATION: "dockerhub"
 
           # report image 
           CF_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/codefresh-report-image-github-action:example-reported-image
