--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,7 +36,7 @@ jobs:
           CF_CONTAINER_REGISTRY_INTEGRATION: "dockerhub"
 
           # report image 
-          CF_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/codefresh-report-image-github-action:example-reported-image
+          CF_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/report-image-github-action
           # integration with
           CF_ENRICHERS: "jira, git"
           # use githug token
